# AI-Soundscape

./: README.md  pyproject.toml  requirements.txt
application/: Dataset.7z.003  inference.py  inference_ARP_SSC.py  inference_AST.py  inference_CNN.py  inference_CNN_Transformer.py  inference_DCNN_CaF_SSC.py  inference_DNN.py  inference_PANN.py  inference_SSC.py  inference_YAMNet.py  models_param.py  models_param_all.py
framework/: config.py  data_generator.py  models_pytorch.py  processing.py  selfattention.py  utilities.py
